# rick-morty-back

./: .env  Cargo.toml  graphql_schema.json  load_db.py  rick_and_morty Session.sql  tables.sql
migrations/2019-12-22-204642_create_location/: down.sql  up.sql
migrations/2019-12-22-204721_create_character/: down.sql  up.sql
migrations/2019-12-22-204754_create_episode/: down.sql  up.sql
migrations/2019-12-22-204801_create_character_episode/: down.sql  up.sql
migrations/2020-01-02-153701_character-text-index/: down.sql  up.sql
raw-data/: character_episode_join.tsv  characters.tsv  episodes.json  episodes.tsv  locations.json  locations.tsv  ss.py
src/: _schema.txt  db.rs  lib.rs  main.rs  schema.rs
src/graphql/: character_model.rs  episode_model.rs  location_model.rs  mod.rs
