[package]
name = "rick-morty-back"
version = "0.1.0"
authors = ["jmanu <jm.castillo12@uniandes.edu.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.14.2"
juniper_rocket = "0.5.2" 
rocket = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
rocket_cors = "0.5.1"
